--- a/button-component-master/src/css/App.css
+++ b/button-component-master/src/css/App.css
@@ -1,5 +1,31 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  min-height: 100vh;
+  align-items: center;
+}
+
+.button-window {
+  flex: 1;
+  align-items: center;
+}
+
+h1 {
+  padding: 0px;
+  margin: 0px;
+}
+
+h2 {
+  font-size: 0.9rem;
+  padding: 0px;
+  margin: 0px 0px 30px 0px;
+  font-weight: normal;
+}
+
+.controls {
+  flex: 1;
+  align-items: center;
 }
 
 .App-logo {
